Added a Camera div

--- a/Prac/TheDarkMaze/index.html
+++ b/Prac/TheDarkMaze/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="game-container">
         <div class="background"></div>
+        <div class="camera"></div>
         <div class="player">
             <div class="player-spriteSheet pixelart"></div>
         </div>
