Added Name and Hearts for player.

--- a/Prac/TheDarkMaze/index.html
+++ b/Prac/TheDarkMaze/index.html
@@ -10,9 +10,25 @@
     <div id="game-container">
         <div class="background"></div>
         <div class="camera"></div>
-        <div class="player">
-            <div class="player-spriteSheet pixelart"></div>
-        </div>
+            <div class="player">
+                <div class="player-sprite">
+                    <div class="player-spriteSheet pixelart"></div>
+                </div>
+                <div class="player-info">
+                    <div class="hearts-container">
+                        <div class="heart">
+                            <div class="heart-sprite one"></div>
+                        </div>
+                        <div class="heart">
+                            <div class="heart-sprite two"></div>
+                        </div>
+                        <div class="heart">
+                            <div class="heart-sprite three"></div>
+                        </div>
+                    </div>
+                    <div class="bullets-container"></div>
+                </div>
+            </div>
     </div>
 </body>
 <script src="./script.js"></script>
