--- a/join.html
+++ b/join.html
@@ -18,16 +18,16 @@
                     </label>
                 </div>
                 
-                    <button class="join-btn cr">Create Room</button>
+                    <button class="jr">Create Room</button>
 
-                    <div class="floating">
+                    <div class="floating-jr">
                         <input id="room" type="text" class="floating__input" name="room" placeholder=" " />
                         <label for="input__username" class="floating__label user-join" data-content="Room Id">
                             <span class="hidden--visually">RoomId</span>
                         </label>
                     </div>
 
-                    <button class="join-btn jr">Join Room</button>
+                    <button class="cr">Join Room</button>
 
 
                     
